<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:text="@string/select_faction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
    <TextView
        android:text="@string/select_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:id="@+id/edit_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_points" />
    <TextView
        android:text="@string/select_komp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText android:id="@+id/edit_komp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_komp" />
</LinearLayout>
